Fix vote buttons alignment

--- a/app/assets/stylesheets/answers.scss
+++ b/app/assets/stylesheets/answers.scss
@@ -35,6 +35,9 @@
       margin: 10px;
       width: fit-content;
       margin-left: 0;
+      .button_to {
+        margin: 0;
+      }
       .vote-button {
         border-color: #333232;
         background-color: #E0E0E0;
